--- a/_sass/kmr.scss
+++ b/_sass/kmr.scss
@@ -8,6 +8,8 @@ $header-color: #97ead2;
 $text-accent: white;
 $link-color: black;
 $code-color: #f1efef;
+$blue: #003366;
+$black: black;
 
 
 // default fonts
