--- a/_sass/kmr/_layout.scss
+++ b/_sass/kmr/_layout.scss
@@ -3,8 +3,6 @@
  */
 
 .page {
-   width: $wrap-mini;
-   margin: auto;
    margin-top: 20px;
  }
 
@@ -25,12 +23,69 @@
   display: block;
   font-size: 24px;
 }
+/**
+* Pages
+*/
+.page-flex {
+  display: flex;
+  justify-content: center;
+}
 
+.page-right {
+  width: 900px;
+}
+
+.page-header-pic {
+  max-width: 200px;
+  max-height: 400px;
+  background-size: 400px;
+  background-position: center;
+  border-top-left-radius: 200px;
+  border-bottom-left-radius: 200px;
+  flex: 1 0 auto;
+  margin-right: 5px;
+}
+
+.page-header-one {
+  font-size: 30px;
+  margin-left: 10px;
+  font-family: $Abel;
+  text-transform: lowercase;
+  border-top: black solid 5px;
+  font-weight: bold;
+}
+
+.page-small-header {
+  font-family: $Abel;
+  border-top: black solid 5px;
+  font-weight: bold;
+  font-size: 20px;
+  margin-top: 10px;
+}
+
+.page-content {
+  margin-left: 10px;
+  ul, li {
+    margin-left: 0px;
+  }
+}
 
 
 /**
  * Posts
  */
+
+.post-quote {
+  margin-left: 30px;
+  margin-right: 30px;
+  font-weight: bold;
+  color: #4e4e4e;
+  padding: 20px;
+  background-color: lightgray;
+  a {
+    font-weight: normal;
+  }
+}
 
 .post-title {
   display: none;
@@ -52,8 +107,8 @@
   justify-content: space-between;
   min-width: 200px;
   .post-image {
-    display: none;
     background-position: center top;
+    background-size: cover;
     width: 200px;
     height: 400px;
     border-top-left-radius: 200px;
@@ -67,9 +122,21 @@
   min-width: 210px;
 }
 
-.post-content {
+.post-width {
   width: 50%;
   margin-bottom: 0px;
+}
+
+.post-content, .page-content {
+
+  img {
+    max-width: 800px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 5px;
+    padding-bottom: 5px;
+  }
 
   video {
     display: block;
@@ -88,10 +155,6 @@
   p {
     margin-top: 10px;
     font-size: 15px;
-  }
-
-  blockquote {
-
   }
 
   h2 {
@@ -120,8 +183,43 @@
     font-size: 20px;
     font-family: $Abel;
     margin-top: 10px;
+    &:before {
+      font-family: "Font Awesome 5 Free";
+      content: "\f005";
+      padding-right: 2px;
+    }
   }
   .footnotes {
     padding-left: 15px;
   }
+
+  blockquote {
+    display: grid;
+    grid-template-columns: 22px auto;
+    background-color: lighten($color-main, 15%);
+    border-left: 4px solid darken($color-main, 20%);
+    padding: 5px;
+    &:before {
+      font-family: "Font Awesome 5 Free";
+      content: "\f1c9";
+      padding: {
+        top: 3px;
+        left: 2px;
+        bottom: 5px;
+      }
+      font-style: normal;
+      color: darken($color-main, 20%);
+      font-size: 25px;
+    }
+    p {
+      margin-top: 0px;
+      padding: {
+        top: 1px;
+        left: 4px;
+        bottom: 2px;
+      }
+      font-style: italic;
+    }
+  }
+
 }
