--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,10 +25,10 @@ layout: default
                         <div class="example">
                             <div class="example-pic"></div>
                             <div class="example-text">
-                                <a class="link-header" href="{{ site.baseurl }}{% post_url 2018-02-24-digital-humanities-website %}"><span>So You Want to Make a Digital Humanities Website</span></a>
+                                <a class="link-header" href="{{ site.baseurl }}{% post_url 2018-02-23-digital-humanities-website %}"><span>So You Want to Make a Digital Humanities Website</span></a>
                                 <div class="link-sub"><span>A Tutorial Series For Planning and Designing a DH Website </span></div>
-                                <p>This tutorial is currently under construction. It will be a part of a digital humanities workshop with Rice University in early April 2018. Before you even dive into the fun stuff like coding and designing the visuals of a digital humanities website, understanding what you want out of your website comes first. It will help limit the problems that inevitably pop up along the way. Here are important questions that you should answer before attempting a project like this.</p>
-                                <div class="read-more"><a href="{{ site.baseurl }}{% post_url 2018-02-24-digital-humanities-website %}">Read More...</a></div>
+                                <p>This tutorial is currently under construction. It will be a part of a digital humanities workshop with Rice University in early April 2018. This tutorial will guide you towards the appropriate platforms, resources, and tutorials for your site. We will identify key aspects of the site such as the audience, the format of the information you want to present, the ability levels of the programmer/team members, and which platforms are best suited for your site. Then we will outline a link tree, sketch out a landing page design, and create a plan of attack for moving forward. By the end of the tutorial, you will have a solid base to build your website off of and a plethora of resources to keep the momentum going.</p>
+                                <div class="read-more"><a href="{{ site.baseurl }}{% post_url 2018-02-23-digital-humanities-website %}">Read More...</a></div>
                             </div>
                         </div>
                     </div>
