--- a/_sass/kmr/_blog.scss
+++ b/_sass/kmr/_blog.scss
@@ -1,16 +1,32 @@
 /**
 * Blog Page Styling
 */
+
+.blog-width {
+  width: 75%;
+  margin: auto;
+}
+
+.page-header-two {
+  font-size: 36px;
+  margin-left: 10px;
+  font-family: $Abel;
+  text-transform: lowercase;
+  text-align: center;
+  font-weight: bold;
+}
+
 .flex-blog {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
 }
 .post-blog {
   flex-basis: 30%;
   margin-top: 10px;
+  background-color: white;
+  padding: 10px;
   .blog-postimg {
-    min-height: 100px;
+    min-height: 150px;
     background-position: center;
     background-size: 600px;
   }
