--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,6 +9,8 @@
     </div>
 
     <div class="nav-links">
+      <a href="{{ "/genealogy" | relative_url }}">genealogy</a>
+      <div> / </div>
       <a href="{{ "/blog" | relative_url }}">blog</a>
       <div> / </div>
       <a href="{{ "/about/" | relative_url }}">about</a>
