Update personal brand

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,11 +5,13 @@
 
     <div class="site-title">
         <a href="{{ "/" | relative_url }}">kelsey rogers</a>
-        <div>writer. designer. storyteller.</div>
+        <div>archivist. designer. storyteller.</div>
     </div>
 
     <div class="nav-links">
       <a href="{{ "/blog" | relative_url }}">blog</a>
+      <div> / </div>
+      <a href=" {{ "/landgren-collins" | relative_url }}">genealogy</a>
       <div> / </div>
       <a href="{{ "/about/" | relative_url }}">about</a>
       <div> / </div>
