--- a/_sass/kmr/_home.scss
+++ b/_sass/kmr/_home.scss
@@ -20,8 +20,8 @@
         align-items: center;
         margin-bottom: 20px;
         margin-top: 20px;
-        background: url("assets/images/ghost-nebula-dragon-2.png");
-        background-position: right;
+        background: url("assets/images/akvarell_pattern2.png");
+        background-position: center;
         min-height: 400px;
     }
 
