--- a/assets/_home.scss
+++ b/assets/_home.scss
@@ -20,8 +20,8 @@
         align-items: center;
         margin-bottom: 20px;
         margin-top: 20px;
-        background: url("ghost-nebula-dragon-2.png");
-        background-position: center;
+        background: url("ship_test.png");
+        background-position: right;
         min-height: 400px;
     }
 
