--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,5 +20,14 @@
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <!-- Slider Javascript file -->
   <script src="{{ "/assets/js/sticky-header.js" | relative_url }}"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116951931-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-116951931-1');
+  </script>
 
 </head>
