Mass Update - Header and Cover

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,8 +16,8 @@ layout: default
 
         <div id="portfolio" class="portfolio-box">
 
-            <div id="design" class="portfolio section">
-                <h1>design</h1>
+            <div id="design" class="portfolio">
+                <h1>design & writing</h1>
 
                 <div class="flex">
 
@@ -50,9 +50,6 @@ layout: default
                         </div>
                     </div>
                 </div>
-
-                <div id="writing" class="portfolio section">
-                    <h1>writing</h1>
 
                     <div class="flex">
                         <div id="holiday" class="writing">
@@ -95,7 +92,6 @@ layout: default
                         </div>
 
                     </div>
-                </div>
 
             </div>
 
