--- a/_sass/kmr.scss
+++ b/_sass/kmr.scss
@@ -2,7 +2,7 @@
 
 // default colors
 
-$color-main: #97ead2;
+$color-main: #F5A745;
 $background-color: white;
 $header-color: #97ead2;
 $text-accent: white;
@@ -10,6 +10,7 @@ $link-color: black;
 $code-color: #f1efef;
 $blue: #003366;
 $black: black;
+$yellow: #F5A745;
 
 
 // default fonts
@@ -25,7 +26,7 @@ $Kavi:'Kavivanar', cursive;
 $main-margin: 5px;
 $spacing-unit: 20px !default;
 $content-width:    1000px !default;
-$wrap-mini: 75%;
+$wrap-mini: 80%;
 
 // Import partials.
 
