--- a/_sass/kmr/_header.scss
+++ b/_sass/kmr/_header.scss
@@ -4,7 +4,7 @@
 .site-header {
   z-index: 100;
     width: 100%;
-    background-color: $black;
+    background: white;
 }
 
 #nav-header {
@@ -15,8 +15,8 @@
     padding: {
       left: 15px;
       right: 0px;
-      top: 5px;
-      bottom: 5px;
+      top: 15px;
+      bottom: 15px;
     }
 }
 
@@ -24,17 +24,17 @@
   font-family: $Abel;
   div {
     display: inline-block;
-    color: white;
+    color: $black;
     padding-left: 5px;
     font-style: italic;
-    font-size: 16px;
+    font-size: 20px;
     }
   a {
-      color: white;
-      font-size: 20px;
+      color: $black;
+      font-size: 25px;
       font-weight: bold;
     &:visited {
-        color: white;
+        color: $black;
       }
     &:hover {
       text-decoration: underline;
@@ -48,14 +48,15 @@
   justify-content: space-between;
   align-self: flex-end;
   a {
-  color: white;
+  color: $black;
   padding-left: 10px;
   padding-right: 10px;
   font-family: $Abel;
-  font-size: 16px;
+  font-size: 20px;
   }
   div {
-    color: white;
+    color: $black;
     font-family: $Abel;
+    font-size: 20px;
   }
 }
