--- a/_sass/kmr/_home.scss
+++ b/_sass/kmr/_home.scss
@@ -4,299 +4,178 @@
 .home-story {
     width: 100%;
     margin-top: 0;
-
     .home-wrap {
         width: $wrap-mini;
         margin: auto;
     }
-
     h1 {
-        font-family: $Abel;
-        //background: $yellow;
-        //color: white;
-        text-align: center;
-        margin-bottom: 40px;
-        padding: 5px;
+      font-family: $Abel;
+      text-align: center;
+      margin-bottom: 40px;
+      padding: 5px;
     }
+}
 
-    .intro-box {
-        display: flex;
-        flex-wrap: wrap;
-        align-items: center;
-        margin-bottom: 40px;
-        margin-top: 10px;
-        background: url("assets/images/toadstools.png");
-        background-position: center;
-        min-height: 400px;
-    }
+.intro-box {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    margin-bottom: 40px;
+    margin-top: 10px;
+    background: url("assets/images/toadstools.png");
+    background-position: center;
+    min-height: 400px;
+}
 
-    .home-ribbon {
-        display: flex;
-        flex-wrap: wrap;
-        max-width: 800px;
-        align-items: center;
-
-        .home-title {
-            background-color: $yellow;
-            margin-left: -100px;
-            padding: 5px 30px;
-            margin-bottom: 10px;
-            font-size: 50px;
-            font-family: $Abel;
-            color: white;
-        }
-
-        .home-desc {
-            margin-left: 20px;
-            background-color: white;
-            padding: 5px;
-            padding-left: 10px;
-            padding-right: 10px;
-            font-size: 20px;
-            color: black;
-            font-family: $base-font-family;
-            font-style: italic;
-        }
-    }
-
-    .portfolio-box {
-
-        .link-header {
-            //span {
-            //    background-color: $yellow;
-            //}
-            font-size: 25px;
-            font-family: $Abel;
-            //color: white;
-
-            //&:visited {
-            //    color: white;
-            //}
-            font-weight: bold;
-        }
-
-        .portfolio {
-            padding-bottom: 40px;
-
-            .example {
-                display: flex;
-                padding-top: 5px;
-            }
-
-            .example-pic {
-                width: 200px;
-                height: 400px;
-                border-top-left-radius: 200px;
-                border-bottom-left-radius: 200px;
-                flex: 1 0 auto;
-            }
-
-            .example-text {
-                margin-left: 10px;
-                max-height: 400px;
-                display: flex;
-                flex-flow: column;
-
-                .link-sub {
-                    margin-top: 5px;
-
-                    span {
-                        //background-color: $color-main;
-                        //font-weight: bold;
-                        font-style:italic;
-                        font-family: $Abel;
-                        font-size: 20px;
-                    }
-                }
-
-                p {
-                    overflow: hidden;
-                    margin-top: 5px;
-                    font-size: 15px;
-                }
-
-                .read-more {
-                    margin-top: 5px;
-
-                    a {
-                        font-size: 16px;
-                        background-color: $black;
-                        color: white;
-                        font-style: italic;
-                        padding: {
-                            left: 2px;
-                            right: 2px;
-                        }
-                    }
-                }
-            }
-
-            #design {
-                margin-top: 20px;
-            }
-
-            #writing {
-                margin-top: 40px;
-            }
-
-            #tutorial {
-                flex: 1;
-                margin-right: 20px;
-
-                .example-pic {
-                    background-image: url("assets/images/tutorial/galymzhan-abdugalimov-181-unsplash.jpg");
-                    background-position: center;
-                    background-size: 600px;
-                }
-            }
-
-            #visual_ab {
-                flex: 1;
-
-                .example-pic {
-                    background-image: url("assets/images/ILN_watercarrier.jpg");
-                    background-size: 300px;
-                    background-position: left;
-                }
-            }
-
-            #holiday {
-                margin-right: 20px;
-                flex: 1;
-
-                .example-pic {
-                    background-image: url("assets/images/Holiday_Dinner2.jpg");
-                    background-position: right;
-                }
-            }
-
-            #encounters {
-                flex: 1;
-
-                .example-pic {
-                    background-image: url("assets/images/devils_tower.jpg");
-                    background-position: top;
-                }
-            }
-        }
-    }
-
-    .flex {
-        display: flex;
-        flex-wrap: wrap;
-        margin-bottom: 20px;
-        justify-content: space-between;
-    }
-
-    #about-box {
-      margin-bottom: 20px;
-      .about-desc {
-        flex-grow: 1;
-        min-height: 200px;
-        min-width: 300px;
-        background-color: $color-main;
-      }
-      #web {
-        margin-left: 5px;
-        margin-right: 5px;
-      }
-    }
-
-    #blog {
-      margin-bottom: 10px;
-      display: none;
-    }
-
-    .flex-blog {
-      max-height: 500px;
-      margin-top: 10px;
-      display: flex;
-      flex-wrap: wrap;
-      flex-flow: row;
-      justify-content: space-between;
-    }
-
-    .blog-ex {
-      max-width: 400px;
-      margin-left: 10px;
-      p {
-        max-height: 100px;
-      }
-      &:first-child {
-        margin-left: 0px;
-      }
-      .blog-img {
-        min-width: 100px;
-        min-height: 100px;
-        background-position: center;
-        background-size: cover;
-      }
-      .blog-title {
-        font-weight: bold;
-      }
-      .blog-subtitle {
-        font-style: italic;
-      }
-      .blog-info {
-        max-height: 400px;
-          p {
-            overflow: hidden;
-            margin-top: 2px;
-            font-size: 15px;
-          }
-        }
-
-      .read-more-blog {
-          margin-top: 5px;
-
-          a {
-              font-size: 16px;
-              background-color: $black;
-              color: white;
-              font-style: italic;
-              padding: {
-                  left: 2px;
-                  right: 2px;
-              }
-          }
-      }
-    }
-
-    #contact {
-      border-top: $black solid 5px;
-      background-image: url("assets/images/griffin-asset.png");
-      background-size: 800px;
-      min-height: 350px;
-      background-repeat: no-repeat;
-      background-position: right;
-      .contact-desc {
-        margin-top: 5px;
-        font-size: 20px;
-        font-family: $Abel;
-        font-style: italic;
-        max-width: 510px;
-      }
-    }
-
-    #contactform {
-      margin-bottom: 20px;
-      .formbox {
-        padding: 2px;
-        display: block;
-        min-height: 20px;
-        margin-top: 10px;
-        min-width: 500px;
-      }
-      textarea {
-        padding: 3px;
-        display: block;
-        margin-top: 10px;
+.home-ribbon {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 800px;
+    align-items: center;
+    .home-title {
+        background-color: $yellow;
+        margin-left: -100px;
+        padding: 5px 30px;
         margin-bottom: 10px;
-        min-width: 500px;
-        min-height: 100px;
-        background-color: white;
-      }
+        font-size: 50px;
+        font-family: $Abel;
+        color: white;
     }
+    .home-desc {
+        margin-left: 20px;
+        background-color: white;
+        padding: 5px;
+        padding-left: 10px;
+        padding-right: 10px;
+        font-size: 20px;
+        color: black;
+        font-family: $base-font-family;
+        font-style: italic;
+    }
+}
 
+.portfolio {
+    padding-bottom: 40px;
+    margin: 0 auto;
+    max-width: $content-width;
+}
 
+.example {
+    display: flex;
+    padding-top: 5px;
+    margin-bottom: 20px;
+}
+
+.example-pic {
+    width: 200px;
+    height: 400px;
+    border-top-left-radius: 200px;
+    border-bottom-left-radius: 200px;
+}
+
+.example-text {
+    margin-left: 20px;
+    max-height: 400px;
+    max-width: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+      .link-sub {
+        margin-top: 5px;
+        span {
+          font-style: italic;
+          font-family: $Abel;
+          font-size: 20px;
+        }
+      }
+      p {
+        overflow: hidden;
+        margin-top: 5px;
+        font-size: 15px;
+      }
+      .read-more {
+        margin-top: 5px;
+        a {
+          font-size: 16px;
+          background-color: $black;
+          color: white;
+          font-style: italic;
+          padding: {
+            left: 2px;
+            right: 2px;
+          }
+        }
+      }
+}
+
+.link-header {
+   font-size: 25px;
+   font-family: $Abel;
+   font-weight: bold;
+}
+
+#tutorial {
+  .example-pic {
+    background-image: url("assets/images/tutorial/galymzhan-abdugalimov-181-unsplash.jpg");
+    background-position: center;
+    background-size: 600px;
+  }
+}
+
+#visual_ab {
+  .example-pic {
+    background-image: url("assets/images/ILN_watercarrier.jpg");
+    background-size: 300px;
+    background-position: left;
+  }
+}
+
+#holiday {
+  .example-pic {
+    background-image: url("assets/images/Holiday_Dinner2.jpg");
+    background-position: right;
+  }
+}
+
+#encounters {
+  .example-pic {
+    background-image: url("assets/images/devils_tower.jpg");
+    background-position: top;
+  }
+}
+
+#contact {
+  border-top: $black solid 5px;
+  background-image: url("assets/images/griffin-asset.png");
+  background-size: 800px;
+  min-height: 350px;
+  background-repeat: no-repeat;
+  background-position: right;
+  .contact-desc {
+    margin-top: 5px;
+    font-size: 20px;
+    font-family: $Abel;
+    font-style: italic;
+    max-width: 510px;
+  }
+}
+
+#contactform {
+  margin-bottom: 20px;
+  .formbox {
+    padding: 2px;
+    display: block;
+    min-height: 20px;
+    margin-top: 10px;
+    min-width: 500px;
+  }
+  textarea {
+    padding: 3px;
+    display: block;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    min-width: 500px;
+    min-height: 100px;
+    background-color: white;
+  }
 }
