Mass Update - Front Page 2.0

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
 
     <div class="site-title">
         <a href="{{ "/" | relative_url }}">kelsey rogers</a>
-        <div>archivist. designer. storyteller.</div>
+        <div>archivist. naturalist. storyteller.</div>
     </div>
 
     <div class="nav-links">
@@ -13,7 +13,7 @@
       <div> / </div>
       <a href="{{ "/about/" | relative_url }}">about</a>
       <div> / </div>
-      <a href="{{ "/contact/" | relative_url }}">contact</a>
+      <a href="{{ "/resume/" | relative_url }}">resume</a>
     </div>
 
   </div>
