--- a/_sass/kmr/_layout.scss
+++ b/_sass/kmr/_layout.scss
@@ -194,23 +194,9 @@
   }
 
   blockquote {
-    display: grid;
-    grid-template-columns: 22px auto;
-    background-color: lighten($color-main, 15%);
-    border-left: 4px solid darken($color-main, 20%);
+    background-color: lighten($color-main, 20%);
+    border-left: 4px solid $color-main;
     padding: 5px;
-    &:before {
-      font-family: "Font Awesome 5 Free";
-      content: "\f1c9";
-      padding: {
-        top: 3px;
-        left: 2px;
-        bottom: 5px;
-      }
-      font-style: normal;
-      color: darken($color-main, 20%);
-      font-size: 25px;
-    }
     p {
       margin-top: 0px;
       padding: {
