--- a/_sass/kmr/_contact.scss
+++ b/_sass/kmr/_contact.scss
@@ -1,40 +1,8 @@
 /**
 * Site Contact Footer
 */
-#contact-line {
-  border-top: black solid 5px;
-  margin-top: 20px;
-}
 #contact {
-  background-image: url("assets/images/griffin-asset.png");
-  background-size: 500px;
-  min-height: 350px;
-  background-repeat: no-repeat;
-  background-position: right;
-  .contact-desc {
-    margin-top: 5px;
-    font-size: 20px;
-    font-family: $Abel;
-    font-style: italic;
-    max-width: 510px;
-  }
-}
-
-#contactform {
-  .formbox {
-    padding: 2px;
-    display: block;
-    min-height: 20px;
-    margin-top: 10px;
-    min-width: 500px;
-  }
-  textarea {
-    padding: 3px;
-    display: block;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    min-width: 500px;
-    min-height: 100px;
-    background-color: white;
-  }
+  margin-top: 20px;
+  margin-bottom: 20px;
+  max-height: 400px;
 }
