--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,57 +18,7 @@ layout: default
 
           <h1>design & writing</h1>
 
-            <div class="portfolio">
-
-                <div id="tutorial" class="example">
-                      <div class="example-pic"></div>
-                      <div class="example-text">
-                        <a class="link-header" href="{{ site.baseurl }}{% post_url 2018-02-23-digital-humanities-website %}">
-                          <span>So You Want to Make a Digital Humanities Website</span>
-                        </a>
-                        <div class="link-sub"><span>A Tutorial Series For Planning and Designing a DH Website </span></div>
-                      <!--<p>This tutorial was a part of a digital humanities workshop with Rice University in early April 2018. This tutorial will guide you towards the appropriate platforms, resources, and tutorials for your site. We will identify key aspects of the site such as the audience, the format of the information you want to present, the ability levels of the programmer/team members, and which platforms are best suited for your site. Then we will outline a link tree, sketch out a landing page design, and create a plan of attack for moving forward. By the end of the tutorial, you will have a solid base to build your website off of and a plethora of resources to keep the momentum going.</p>-->
-                        <div class="read-more"><a href="{{ site.baseurl }}{% post_url 2018-02-23-digital-humanities-website %}">Read More...</a></div>
-                      </div>
-                </div>
-
-                <div id="visual_ab" class="example">
-                    <div class="example-pic"></div>
-                    <div class="example-text">
-                      <a class="link-header" href="http://visualizingabolition.org/"><span>Visualizing Abolition: A Digital History of the Supression of the African Slave Trade</span></a>
-                      <div class="link-sub"><span>A digital humanities project funded through the University of Missouri Honors College.</span></div>
-                      <!--<p>Visualizing Abolition maps the suppression of the African slave trade by tracing nearly 31,000 records of correspondence exchanged between the British Foreign Office and British commissioners, ministers, naval officers, and representatives of foreign governments around the world over the course of the nineteenth century. It provides users with three resources. First, a database that lists the names of the senders, recipients, places of origin and destination, dates, as well as the subject of the letters when available. Second, essays exploring different topics related to the suppression of the traffic. Finally, a gallery of images that provides visual context for the information available on the website. These resources allow students and researchers to further understand the history of the suppression of the African slave trade and expand our knowledge of the largest coerced migration in history.</p>-->
-                      <div class="read-more"><a href="http://visualizingabolition.org/">Read More...</a></div>
-                    </div>
-                </div>
-
-                <div id="holiday" class="example">
-                    <div class="example-pic"></div>
-                    <div class="example-text">
-                      <a class="link-header" href="https://artifactsjournal.missouri.edu/2017/05/christmas-holiday-queering-family-in-20th-century-southern-missouri/"><span>Christmas Holiday: Queering Family in 20th Century Southern Missouri</span></a>
-                      <div class="link-sub"><span>Published in Artifacts: A Journal of Undergraduate Writing Issue 15, Spring 2017.</span></div>
-                      <!--<p>An obituary in The Southeast Missourian lists Elaine “Tommie” Davis as the business partner of Mary Jane “Miss Jane” Barnett for over forty years (Elaine Davis Obituary). However, the family albums of the two tell a richer story, they were life partners as well as business partners, a radical act in mid-century America, and perhaps even a dangerous one in Southern Missouri. Their life together in Cape Girardeau, Missouri was recorded by over six hundred photographs, letters, and hours of home video. Out of these materials housed in the State Historical Society of Missouri in Cape Girardeau, the photographs of their personal lives are of particular interest. The family snapshot represents and reinforces particular narratives of what a family should look like, and how it should function. This is further emphasized in Christmas family snapshots. Thus, the family snapshots of Barnett and Davis, and in particular, ‘Christmas Holiday’, implicitly challenge the very culture that their lives were no doubt steeped in. The family album thus becomes a resistive force, whether consciously or unconsciously, against the pervasive heteronormativity and homophobia of both the time and place.</p>-->
-                      <div class="read-more"><a href="https://artifactsjournal.missouri.edu/2017/05/christmas-holiday-queering-family-in-20th-century-southern-missouri/">Read More...</a></div>
-                    </div>
-               </div>
-
-                <div id="encounters" class="example">
-                    <a href="https://www.flickr.com/photos/internetarchivebookimages/14780464664/">
-                    <div class="example-pic"></div>
-                    </a>
-                    <div class="example-text">
-                      <a class="link-header" href="{{ site.baseurl }}{% post_url 2017-07-23-close-encounters %}"><span>Close Encounters With Legend: The Ultimate Legend Trip</span></a>
-                      <div class="link-sub"><span>Presented at the Missouri Folklore Conference Spring 2015</span></div>
-                      <!--<p>Legend tripping and ostensive action are important ways in which people interact and transform legends, especially extraterrestrial experience legends. Stephen Spielberg’s Close Encounters of the Third Kind engages these legends at every level of ostensive action, transforming itself into both the representative of and instigator of the legend trip. Just as Linda Dégh’s holiday of Halloween “…is based on legends, communicates legends, and creates legends,” so too is Close Encounters of the Third Kind. This film takes extraterrestrial experience, and its associated ostensive actions, and organizes them in a satisfying narrative that encourages the viewer to interact with the legend complex, even after leaving the theater. This takes the form of legend tripping, which unlike Bill Ellis’ brand of legend tripping, is a type that is engaged more by adults than by adolescents. The film encourages legend tripping not only through onscreen representations of extraterrestrial experiences, but also by creating a narrative foundation that relies heavily on legend tripping to drive the plot. This is seen through its presentation of ‘a close encounter of the fifth kind’ as the longed for and final evolution of the legend trip. It also creates within Western popular culture a new location to visit in a real life legend trip. By incorporating the extraterrestrial experience legend complex into all levels of the film, Close Encounters of the Third Kind creates and celebrates the ultimate legend trip.</p>-->
-                      <div class="read-more"><a href="{{ site.baseurl }}{% post_url 2017-07-23-close-encounters %}">Read More...</a></div>
-                    </div>
-                </div>
-
-            </div>
-
-        </div>
-
-      {% include contact.html %}
+      {% include portfolio.html %}
 
   </div>
 </div>
