--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -1,5 +1,16 @@
 <div class="portfolio">
 
+    <div id="genealogy" class="example">
+      <div class="example-pic"></div>
+        <div class="example-text">
+          <a class="link-header" href="https://krogersst.github.io/landgren-collins">
+            <span>A Family History of the Landgren and Collins Families</span>
+          </a>
+          <div class="link-sub"><span>A project charting the genealogy of the Langren and Collins families.</span></div>
+        <p>This ongoing personal project was born out of my work with the Kenton County Public Library's Local History and Genealogy Department. It features an interactive family tree and numerous resources I've collected about my maternal grandmother's family.</p>
+        </div>
+    </div>
+
     <div id="tutorial" class="example">
           <div class="example-pic"></div>
           <div class="example-text">
