Add Footer, Add MLIS, Add Eastern Spadefoot, Adjust styles

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,3 @@
-<script> {% include stickyheader.js %} </script>
 <header class="site-header" role="banner">
 
   <div id="nav-header">
@@ -9,11 +8,15 @@
     </div>
 
     <div class="nav-links">
-      <a href="{{ "/landgren-collins" | relative_url }}">genealogy</a>
-      <div> / </div>
       <a href="{{ "/about/" | relative_url }}">about</a>
       <div> / </div>
       <a href="{{ "/resume/" | relative_url }}">resume</a>
+      <div> / </div>
+      <a href="{{ "/" | relative_url }}">portfolio</a>
+      <div> / </div>
+      <a href="{{ "/landgren-collins" | relative_url }}">genealogy</a>
+      <div> / </div>
+      <a href="{{ "/mlis" | relative_url }}">mlis</a>
     </div>
 
   </div>
