--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,7 +16,7 @@ layout: default
 
         <div class="portfolio-box">
 
-          <h1>design & writing</h1>
+          <h1>portfolio</h1>
 
       {% include portfolio.html %}
 
