Fix genealogy image url

--- a/_sass/kmr/_home.scss
+++ b/_sass/kmr/_home.scss
@@ -136,7 +136,7 @@
 
 #genealogy {
   .example-pic {
-    background-image: url("assets/images/kvarnby.png");
+    background-image: url("assets/images/Kvarnby.png");
     background-position: center;
   }
 }
