Corrected links with trailing slash

--- a/_layouts/spadefoot.html
+++ b/_layouts/spadefoot.html
@@ -10,13 +10,13 @@ layout: default
 <div class="spadefoot-header">
   <div class="spadefoot-title"><a href="{{ "/mlis/spadefoot/home" | relative_url }}">Scaphiopus <em>solitarius</em></a></div>
   <div class="spadefoot-links">
-    <a href="{{ "/mlis/spadefoot/home/" | relative_url }}">home</a>
+    <a href="{{ "/mlis/spadefoot/home" | relative_url }}">home</a>
     <div> / </div>
-    <a href="{{ "/mlis/spadefoot/thelithograph/" | relative_url }}">the lithograph</a>
+    <a href="{{ "/mlis/spadefoot/thelithograph" | relative_url }}">the lithograph</a>
     <div> / </div>
-    <a href="{{ "/mlis/spadefoot/thetoad/" | relative_url }}">the toad</a>
+    <a href="{{ "/mlis/spadefoot/thetoad" | relative_url }}">the toad</a>
     <div> / </div>
-    <a href="{{ "/mlis/spadefoot/thelibrary/" | relative_url }}">the library</a>
+    <a href="{{ "/mlis/spadefoot/thelibrary" | relative_url }}">the library</a>
   </div>
 </div>
 
