--- a/_layouts/lithograph.html
+++ b/_layouts/lithograph.html
@@ -4,13 +4,13 @@ layout: spadefoot
 <div id="lith-menu">
   <h2>{{ page.title | escape }}</h2>
   <div class="lith-link">
-  <a href="{{ '/mlis/spadefoot/thelithograph/' | relative_url }}">the lithograph</a>
+  <a href="{{ '/mlis/spadefoot/thelithograph' | relative_url }}">the lithograph</a>
   <div> / </div>
-  <a href="{{ '/mlis/spadefoot/views/' | relative_url }}">views</a>
+  <a href="{{ '/mlis/spadefoot/views' | relative_url }}">views</a>
   <div> / </div>
-  <a href="{{ '/mlis/spadefoot/aroundtheworld/' | relative_url }}">around the world</a>
+  <a href="{{ '/mlis/spadefoot/aroundtheworld' | relative_url }}">around the world</a>
   <div> / </div>
-  <a href="{{ 'mlis/spadefoot/timeline/' | relative_url }}">timeline</a>
+  <a href="{{ 'mlis/spadefoot/timeline' | relative_url }}">timeline</a>
   </div>
 </div>
 
