--- a/_layouts/toad.html
+++ b/_layouts/toad.html
@@ -4,11 +4,11 @@ layout: spadefoot
 <div id="lith-menu">
   <h2>{{ page.title | escape }}</h2>
   <div class="toad-link">
-  <a href="{{ '/mlis/spadefoot/thetoad/' | relative_url }}">the toad</a>
+  <a href="{{ '/mlis/spadefoot/thetoad' | relative_url }}">the toad</a>
   <div> / </div>
-  <a href="{{ '/mlis/spadefoot/names/' | relative_url }}">names</a>
+  <a href="{{ '/mlis/spadefoot/names' | relative_url }}">names</a>
   <div> / </div>
-  <a href="{{ '/mlis/spadefoot/faces/' | relative_url }}">faces</a>
+  <a href="{{ '/mlis/spadefoot/faces' | relative_url }}">faces</a>
   </div>
 </div>
 
