--- a/_sass/kmr/_spadefoot.scss
+++ b/_sass/kmr/_spadefoot.scss
@@ -49,7 +49,7 @@
   display: flex;
   justify-content: center;
   flex-direction: row;
-  width: 900px;
+  width: 975px;
   img {
     width: 500px;
   }
@@ -58,6 +58,9 @@
   }
   .spade-home-text {
     margin-left: 20px;
+    :first-child {
+      margin-top: 0px;
+    }
   }
 }
 
