--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,6 +3,7 @@
     <a href="https://jekyllrb.com/"><img src="{{ '/assets/logos/jekyll-logo-black-red-transparent.png' | relative_url }}"/></a>
     <a href="https://pages.github.com/"><img src="{{ '/assets/logos/GitHub_Logo.png' | relative_url }}"/></a>
     <a href="https://https://creativecommons.org/licenses/by/4.0/"><img src="{{ '/assets/logos/cc.svg' | relative_url }}"/><img src="{{ '/assets/logos/by.svg' | relative_url }}"/></a>
+    <a id="sitecode" href="https://github.com/krogersst/krogersst.github.io">Site Code</a>
   </div>
   <p>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a> unless otherwise specified.</p>
 </footer>
