Metadata Final Project Upload

--- a/_sass/kmr/_spadefoot.scss
+++ b/_sass/kmr/_spadefoot.scss
@@ -9,7 +9,7 @@
   border-top: black solid 2px;
 }
 
-.spadefoot-content {
+.spadefoot-content, .metadata-content {
   display: flex;
   flex-direction: column;
 }
