Update About and Resume, Add MLIS to Home, Add Contact Page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,9 +14,7 @@
       <div> / </div>
       <a href="{{ "/" | relative_url }}">portfolio</a>
       <div> / </div>
-      <a href="{{ "/landgren-collins" | relative_url }}">genealogy</a>
-      <div> / </div>
-      <a href="{{ "/mlis" | relative_url }}">mlis</a>
+      <a href="{{ "/contact/" | relative_url }}">contact</a>
     </div>
 
   </div>
