--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,7 +9,7 @@ layout: default
                     archivist. naturalist. storyteller.
                 </div>
                 <div class="home-desc">
-                  Hi! I'm Kelsey Rogers. I love to tell stories. Let me help you tell yours.
+                  I'm Kelsey Rogers. I love to tell stories. Let me help you tell yours.
                 </div>
             </div>
         </div>
