--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -1,5 +1,16 @@
 <div class="portfolio">
 
+    <div id="mlis" class="example">
+      <div class="example-pic"></div>
+        <div class="example-text">
+          <a class="link-header" href="{{ site.baseurl }}/mlis">
+            <span>MLIS Coursework and Projects</span>
+          </a>
+        <div class="link-sub"><span>Releveant Coursework and Culminating Projects</span></div>
+        <p>A variety of in-depth digital LAM (Libraries, Archives, and Museums) projects have been undertaken during coursework for my Masters in Library and Information Science at Kent State. This includes creating and implementing a metadata schema as well as a cultural heritage informatics website.</p>
+      </div>
+    </div>
+
     <div id="genealogy" class="example">
       <div class="example-pic"></div>
         <div class="example-text">
