--- a/_sass/kmr/_home.scss
+++ b/_sass/kmr/_home.scss
@@ -134,6 +134,13 @@
  margin-bottom: 5px;
 }
 
+#mlis {
+  .example-pic {
+    background-image: url("mlis/spadefoot/images/round_spadefoot.png");
+    background-size: 100%;
+  }
+}
+
 #genealogy {
   .example-pic {
     background-image: url("assets/images/Kvarnby.png");
