MLIS Portfolio Links Change

--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -10,7 +10,7 @@ layout: default
     <div class="page-right">
 
       <div class="p-mlis-header">
-        <a href="{{ '/mlis/portoflio/home' | relative_url }}">Kent State MLIS Program</a>
+        <a href="{{ '/mlis/portfolio/home' | relative_url }}">Kent State MLIS Program</a>
       </div>
 
       <div class="p-header">
