--- a/_layouts/metadata.html
+++ b/_layouts/metadata.html
@@ -5,7 +5,7 @@ layout: default
 
 <div class="spadefoot-page">
 
-<p class="spadefoot-credit">Project for <a href="{{ '/mlis' | relative_url }}">Kent State MLIS Program</a> - Metadata Architecture and Implementation Fall 2019</p>
+<p class="spadefoot-credit">Project for <a href="{{ 'mlis/portfolio/home' | relative_url }}">Kent State MLIS Program</a> - Metadata Architecture and Implementation Fall 2019</p>
 
 <div class="spadefoot-header">
   <div class="spadefoot-title"><a href="{{ "/mlis/metadata/home" | relative_url }}">Secondhand CDs</a></div>
