--- a/_layouts/practicum2.html
+++ b/_layouts/practicum2.html
@@ -18,7 +18,7 @@ layout: default
         <div class="p-nav spadefoot-links">
           <a href="{{ '/mlis/practicum/home' | relative_url }}">about</a>
           <div> / </div>
-          <a href="{{ "/mlis/practicum/portfolio" | relative_url }}">portfolio</a>
+          <a href="{{ "/mlis/practicum/projects" | relative_url }}">projects</a>
           <div> / </div>
           <a href="{{ "/mlis/practicum/worklog" | relative_url }}">work log</a>
           <div> / </div>
