Practicum Update & Spellcheck

--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -154,7 +154,7 @@ var timeline_json = {
        },
        "text": {
          "headline": "The Eastern Spadefoot Toad's current scientific name <em>Scaphiopus holbrookii</em> is first used by Cope",
-         "text": "<p>Edward Drinker Cope, an American paleonstologist and herpetologist, was the first to use the currently accepted scientific name for the Eastern Spadefoot Toad. It is a fitting combination of Harlan's original nod to Holbrook and Holbrook's own genus name for the toad.</p><p>Source: <a href='http://research.amnh.org/vz/herpetology/amphibia/Amphibia/Anura/Scaphiopodidae/Scaphiopus/Scaphiopus-holbrookii'>Amphibian Species of the World 6.0, an Online Reference.</a> American Museum of Natural History</p>"
+         "text": "<p>Edward Drinker Cope, an American paleontologist and herpetologist, was the first to use the currently accepted scientific name for the Eastern Spadefoot Toad. It is a fitting combination of Harlan's original nod to Holbrook and Holbrook's own genus name for the toad.</p><p>Source: <a href='http://research.amnh.org/vz/herpetology/amphibia/Amphibia/Anura/Scaphiopodidae/Scaphiopus/Scaphiopus-holbrookii'>Amphibian Species of the World 6.0, an Online Reference.</a> American Museum of Natural History</p>"
        },
        "media": {
          "url": "https://upload.wikimedia.org/wikipedia/commons/7/7a/Cope_Edward_Drinker_1840-1897.jpg",
