--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -17,7 +17,7 @@
           <a class="link-header" href="https://krogersst.github.io/landgren-collins">
             <span>A Family History of the Landgren and Collins Families</span>
           </a>
-          <div class="link-sub"><span>A project charting the genealogy of the Langren and Collins families.</span></div>
+          <div class="link-sub"><span>A project charting the genealogy of the Landgren and Collins families.</span></div>
         <p>This ongoing personal project was born out of my work with the Kenton County Public Library's Local History and Genealogy Department. It features an interactive family tree and numerous resources I've collected about my maternal grandmother's family.</p>
         </div>
     </div>
@@ -36,7 +36,7 @@
     <div id="visual_ab" class="example">
         <div class="example-pic"></div>
         <div class="example-text">
-          <a class="link-header" href="http://visualizingabolition.org/"><span>Visualizing Abolition: A Digital History of the Supression of the African Slave Trade</span></a>
+          <a class="link-header" href="http://visualizingabolition.org/"><span>Visualizing Abolition: A Digital History of the Suppression of the African Slave Trade</span></a>
           <div class="link-sub"><span>A digital humanities project funded through the University of Missouri Honors College.</span></div>
           <p>Visualizing Abolition maps the suppression of the African slave trade by tracing nearly 31,000 records of correspondence exchanged between the British Foreign Office and British commissioners, ministers, naval officers, and representatives of foreign governments around the world over the course of the nineteenth century. </p>
         </div>
