Practicum Update - Class Submission

--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -18,6 +18,8 @@ layout: default
         <div class="p-header-one"><a href="{{ '/mlis/portfolio/home' | relative_url }}">MLIS Portfolio</a></div>
         </div>
         <div class="p-nav spadefoot-links">
+          <a href="{{ '/mlis/portfolio/home' | relative_url }}">home</a>
+          <div> / </div>
           <a href="{{ "/mlis/portfolio/this-i-believe" | relative_url }}">this i believe</a>
           <div> / </div>
           <a href="{{ "/mlis/portfolio/coursework" | relative_url }}">coursework</a>
