--- a/_sass/kmr/_base.scss
+++ b/_sass/kmr/_base.scss
@@ -8,12 +8,11 @@ dl, dd, figure {
   padding: 0;
 }
 
-
-
 /**
  * Basic styling
  */
 
+/** Forces Footer to Bottom of Screen Part 1 **/
 html {
   height: 100%;
 }
@@ -21,18 +20,24 @@ html {
 body {
   font-family: $base-font-family;
   background-color: $background-color;
+  /** Forces Footer to Bottom of Screen Part 2 **/
   display: flex;
   height: 100%;
   flex-direction: column;
 }
 
+/** Forces Footer to Bottom of Screen Part 3 **/
 main {
   flex: 1 0 auto;
 }
 
-code {
-  background-color: #f1efef;
-  margin: 1px;
+/**
+ * Wrapper
+ */
+
+/** NEEDED???? **/
+.wrapper {
+  margin: auto;
 }
 
 /**
@@ -67,20 +72,10 @@ li {
 }
 
 /**
- * Wrapper
- */
-.wrapper {
-  margin: auto;
-}
+* Code
+*/
 
-/**
- * Icons
- */
-.icon > svg {
-  display: inline-block;
-  vertical-align: middle;
-
-  path {
-    fill: $color-main;
-  }
+code {
+  background-color: #f1efef;
+  margin: 1px;
 }
