--- a/_sass/kmr/_home.scss
+++ b/_sass/kmr/_home.scss
@@ -65,7 +65,7 @@
 
 .portfolio {
   margin: 0 auto;
-  width: 1000px;
+  max-width: 1000px;
 }
 
 .example {
@@ -124,7 +124,7 @@
   }
 }
 
-.page-content .link-header {
+.portfolio .link-header {
   text-decoration: none;
   font-size: 25px;
   font-family: $Abel;
@@ -135,6 +135,7 @@
    padding: 5px;
    &:hover {
      background-color: darken($yellow, 10);
+     text-decoration: none;
    }
  }
  margin-bottom: 5px;
